tests/parsing/smtlib/v2.6/errors/064_declare-datatypes_bad_sort_dec_list_1.expected
File "tests/parsing/smtlib/v2.6/errors/064_declare-datatypes_bad_sort_dec_list_1.smt2", line 2, character 19-20:
2 | (declare-datatypes _)
                       ^
Error while parsing a datatypes declaration, read the reserved word '_',
      but expected a list of sort declaration, starting with an opening
      parenthesis.
